[package]
name = "sv-avail-filed"
version = "0.0.1"
edition = "2021"

[package.metadata.commands]
dev = "cargo watch -x run"

[profile.dev]
split-debuginfo = "unpacked"

[profile.dev.build-override]
opt-level = 3

[dependencies]
actix-web = "4.6.0"
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
env_logger = "0.11.3"
log = "0.4.21"
rocksdb = "0.22.0"
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"


